@@ -1,3 +1,6 @@
+Changelog 1.6.6:
+Fix Fanart.tv call for movies
+
 Changelog 1.6.5:
 Fixed shows not syncing due to oddly formatted season information
 Fix MyFiles link resolving
